fixed css bug on firefox

--- a/src/components/sidenav/Sidenav.scss
+++ b/src/components/sidenav/Sidenav.scss
@@ -45,7 +45,8 @@
       }
 
       &:after {
-        content: '';
+        content: '.';
+        color: rgba(0,0,0,0);
         height: 1px;
         display: inline-block;
         width: 80%;
