--- a/src/views/topics/topic/Topic.scss
+++ b/src/views/topics/topic/Topic.scss
@@ -21,6 +21,7 @@
     }
 
     .topic-consumers {
+      flex: 1 1;
       margin-top: 15px;
       max-height: 200px;
       display: flex;
